[package]
name = "cancelifnotchangedaction"
description = "GitHub Action to cancel the current workflow if the git log doesn't include commits for a given time"
version = "0.1.0"
authors = ["Bjoern Quentin <bjoern.quentin@grandcentrix.net>"]
repository = "https://github.com/bjoernQ/cancelifnotchangedaction"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.46"
wasm-bindgen = "0.2.69"
actions-toolkit-sys = "0.3.1"

[profile.release]
lto = true
